--- a/conf/train_cifar10.yaml
+++ b/conf/train_cifar10.yaml
@@ -32,5 +32,7 @@ sampler:
   integration_steps: 10
 
 data:
+  root: "/lustre/fsmisc/dataset"
+  # root: "$DSDIR"
   n_subsample: 50000
   random_horizontal_flip: True
