--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
-name = "prigml"
+name = "closedformfm"
 version = "0.1.0"
-description = "Cleanup of the NeurIPS code, to be adapted for prigml"
+description = "Code of the NeurIPS 2025 paper On the Closed-Form of Flow Matching: Generalization Does
+Not Arise from Target Stochasticity"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
